--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Undangan Digital - Azzahra & Wijang</title>
+  <title>Azzahra & Wijang Meh-nikah</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Alice&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
@@ -59,7 +59,7 @@
       <h1 class="text-5xl font-title mb-8 leading-tight">Azzahra<br>& Wijang</h1>
       <div class="mb-10 py-4 border-y border-white/20">
         <p class="text-[10px] uppercase tracking-widest mb-2 opacity-70">Special Invite To:</p>
-        <h2 class="text-xl font-serif italic tracking-wider">Zulaikha The Matchmaker</h2>
+        <h2 class="text-xl font-serif italic tracking-wider">Maikat Rahmah Sejagat</h2>
       </div>
       <button onclick="openInvitation()" class="bg-white text-black px-10 py-3 rounded-full text-[10px] font-bold uppercase tracking-[0.2em] hover:bg-stone-200 transition-all shadow-xl">
         Buka Undangan
