--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     #cover {
       position: fixed; top: 0; left: 0; right: 0; bottom: 0;
-      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&q=80&w=1000');
+      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('cover.jpg');
       background-size: cover; background-position: center;
       z-index: 100; display: flex; flex-direction: column; align-items: center; justify-content: center;
       transition: transform 1.2s cubic-bezier(0.77, 0, 0.175, 1);
