--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
   <style>
     :root { --primary: #9B6B43; --bg: #F4F1EA; --text: #4A4238; }
+    .mobile-frame {
+    max-width: 450px;
+    width: 100%; /* Pastikan gunakan 100% */
+    margin: 0 auto;
+    background: var(--bg);
+    position: relative;
+    overflow-x: hidden; /* Kunci di sini juga */
+    box-sizing: border-box; /* Padding masuk ke dalam, bukan ke luar */
+}
     body { font-family: 'Quicksand', sans-serif; background-color: #1a1a1a; color: var(--text); overflow-x: hidden; }
     .font-title { font-family: 'Marcellus', serif; }
     .font-serif { font-family: 'Alice', serif; }
@@ -92,7 +101,7 @@
       </div>
     </section>
 
-    <section class="py-20 px-8 text-center bg-[#f5ecda] rounded-t-[50px] -mt-12 relative z-10 shadow-sm" data-aos="fade-up">
+    <section class="py-20 px-8 text-center bg-[#f5ecda] rounded-t-[20px] -mt-12 relative z-10 shadow-sm" data-aos="fade-up">
       <div class="text-[#7A5A3D] text-3xl mb-8 leading-loose font-serif italic" dir="rtl">
         وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً
       </div>
