--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Azzahra & Wijang Meh-nikah</title>
+  <title>Azzahra & Wijang Me(h)nikah</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Alice&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
@@ -68,7 +68,7 @@
       <h1 class="text-5xl font-title mb-8 leading-tight">Azzahra<br>& Wijang</h1>
       <div class="mb-10 py-4 border-y border-white/20">
         <p class="text-[10px] uppercase tracking-widest mb-2 opacity-70">Special Invite To:</p>
-        <h2 class="text-xl font-serif italic tracking-wider">Maikat Rahmah Sejagat</h2>
+        <h2 class="text-l font-serif italic tracking-wider">Malaikat Rahmah Sejagat</h2>
       </div>
       <button onclick="openInvitation()" class="bg-white text-black px-10 py-3 rounded-full text-[10px] font-bold uppercase tracking-[0.2em] hover:bg-stone-200 transition-all shadow-xl">
         Buka Undangan
@@ -101,15 +101,16 @@
       </div>
     </section>
 
-    <section class="py-20 px-8 text-center bg-[#f5ecda] rounded-t-[20px] -mt-12 relative z-10 shadow-sm" data-aos="fade-up">
-      <div class="text-[#7A5A3D] text-3xl mb-8 leading-loose font-serif italic" dir="rtl">
-        وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً
-      </div>
-      <p class="text-xs leading-relaxed text-stone-500 italic mb-6 px-4">
-        "Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya."
-      </p>
-      <p class="font-bold text-[#9B6B43] tracking-widest text-[10px] uppercase">— QS. Ar-Rum: 21 —</p>
-    </section>
+    <section class="py-16 px-10 text-center bg-[#f5ecda] rounded-t-[50px] -mt-12 relative z-10 shadow-sm" data-aos="fade-up">
+  <div class="text-[#7A5A3D] text-xl mb-6 leading-[2.5] font-serif" dir="rtl">
+    وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً
+  </div>
+  
+  <p class="text-[11px] leading-relaxed text-stone-500 italic mb-6">
+    "Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya."
+  </p>
+  <p class="font-bold text-[#9B6B43] tracking-widest text-[9px] uppercase">— QS. Ar-Rum: 21 —</p>
+</section>
 
     <section class="py-12 px-10 text-center" data-aos="fade-up">
       <p class="text-xs leading-relaxed text-stone-500 italic">
