--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
       </audio>
     </div>
 
-    <section class="min-h-screen flex flex-col items-center justify-center p-8 text-center bg-[#EAE3D5]">
+   <section class="min-h-screen flex flex-col items-center justify-center p-8 text-center bg-[#EAE3D5]">
+
+<section class="py-24 px-8 flex flex-col items-center justify-center text-center bg-[#EAE3D5]">
       <div class="arch-frame w-full py-12 px-4" data-aos="fade-up">
         <p class="uppercase tracking-[0.4em] text-[10px] mb-4 text-[#9B6B43]">Walimatul 'Ursy</p>
         <h1 class="text-5xl font-title text-[#7A5A3D] leading-tight">Azzahra<br>&<br>Wijang</h1>
@@ -101,16 +103,13 @@
       </div>
     </section>
 
-    <section class="py-16 px-10 text-center bg-[#f5ecda] rounded-t-[50px] -mt-12 relative z-10 shadow-sm" data-aos="fade-up">
-  <div class="text-[#7A5A3D] text-xl mb-6 leading-[2.5] font-serif" dir="rtl">
-    وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً
-  </div>
-  
-  <p class="text-[11px] leading-relaxed text-stone-500 italic mb-6">
-    "Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya."
-  </p>
-  <p class="font-bold text-[#9B6B43] tracking-widest text-[9px] uppercase">— QS. Ar-Rum: 21 —</p>
-</section>
+    <div class="text-[#7A5A3D] text-xl mb-10 leading-[2.8] font-serif" dir="rtl">
+  وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً
+</div>
+<p class="text-[11px] leading-relaxed text-stone-500 italic mb-8 px-2">
+  "Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya."
+</p>
+<p class="font-bold text-[#9B6B43] tracking-widest text-[9px] uppercase opacity-80">— QS. Ar-Rum: 21 —</p>
 
     <section class="py-12 px-10 text-center" data-aos="fade-up">
       <p class="text-xs leading-relaxed text-stone-500 italic">
