--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <section class="py-10 px-8 space-y-20">
       <div class="text-center" data-aos="fade-right">
         <div class="arch-frame w-48 h-64 mx-auto mb-6 overflow-hidden" style="border-radius: 150px;">
-          <img src="https://via.placeholder.com/400x600/D4B996/7A5A3D?text=Azzahra" class="w-full h-full object-cover">
+          <img src="cpw.jpg" class="w-full h-full object-cover">
         </div>
         <h2 class="text-3xl font-title text-[#7A5A3D]">Luthfia Azzahra</h2>
         <p class="text-[10px] uppercase mt-2 font-bold tracking-widest text-[#9B6B43]">Mempelai Wanita</p>
@@ -133,7 +133,7 @@
 
       <div class="text-center" data-aos="fade-left">
         <div class="arch-frame w-48 h-64 mx-auto mb-6 overflow-hidden">
-          <img src="https://via.placeholder.com/400x600/D4B996/7A5A3D?text=Wijang" class="w-full h-full object-cover">
+          <img src="cpp.jpg" class="w-full h-full object-cover">
         </div>
         <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
         <p class="text-[10px] uppercase mt-2 font-bold tracking-widest text-[#9B6B43]">Mempelai Pria</p>
