--- a/index.html
+++ b/index.html
@@ -119,26 +119,38 @@
       </p>
     </section>
 
-    <section class="py-10 px-8 space-y-20">
+    <section class="py-10 px-6 space-y-20">
+      
       <div class="text-center" data-aos="fade-right">
-        <div class="arch-frame w-48 h-64 mx-auto mb-6 overflow-hidden" style="border-radius: 150px;">
-          <img src="cpw.jpg" class="w-full h-full object-cover">
+        <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden shadow-2xl" style="border-radius: 150px 150px 0 0;">
+          <img src="cpw.jpg" class="w-full h-full object-cover grayscale-[20%] hover:grayscale-0 transition-all duration-700" alt="Luthfia Azzahra">
         </div>
         <h2 class="text-3xl font-title text-[#7A5A3D]">Luthfia Azzahra</h2>
-        <p class="text-[10px] uppercase mt-2 font-bold tracking-widest text-[#9B6B43]">Mempelai Wanita</p>
-        <p class="text-xs mt-4 px-4 leading-relaxed">Putri dari Bapak Hermawan Nuryanto<br>& Ibu Deni Latifah</p>
+        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Wanita</p>
+        <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
+        <p class="text-xs px-6 leading-relaxed text-stone-500">
+          Putri dari Bapak Hermawan Nuryanto<br>& Ibu Deni Latifah
+        </p>
       </div>
 
-      <div class="text-4xl font-serif text-center text-[#D4B996] opacity-50">&</div>
+      <div class="flex items-center justify-center gap-4 opacity-30" data-aos="zoom-in">
+        <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
+        <span class="text-4xl font-serif text-[#D4B996]">&</span>
+        <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
+      </div>
 
       <div class="text-center" data-aos="fade-left">
-        <div class="arch-frame w-48 h-64 mx-auto mb-6 overflow-hidden">
-          <img src="cpp.jpg" class="w-full h-full object-cover">
+        <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden shadow-2xl" style="border-radius: 150px 150px 0 0;">
+          <img src="cpp.jpg" class="w-full h-full object-cover grayscale-[20%] hover:grayscale-0 transition-all duration-700" alt="Wijang Asadullah">
         </div>
         <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
-        <p class="text-[10px] uppercase mt-2 font-bold tracking-widest text-[#9B6B43]">Mempelai Pria</p>
-        <p class="text-xs mt-4 px-4 leading-relaxed">Putra dari Bapak Bandiya<br>& Ibu Sumanah</p>
+        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Pria</p>
+        <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
+        <p class="text-xs px-6 leading-relaxed text-stone-500">
+          Putra dari Bapak Bandiya<br>& Ibu Sumanah
+        </p>
       </div>
+
     </section>
 
     <section class="py-16 px-6 bg-[#7A5A3D] text-white text-center rounded-t-[50px] shadow-lg" data-aos="fade-up">
