--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <img src="cpw.jpg" class="w-full h-full object-cover grayscale-[20%] hover:grayscale-0 transition-all duration-700" alt="Luthfia Azzahra">
         </div>
         <h2 class="text-3xl font-title text-[#7A5A3D]">Luthfia Azzahra</h2>
-        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Wanita</p>
+        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Mumet</p>
         <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
         <p class="text-xs px-6 leading-relaxed text-stone-500">
           Putri dari Bapak Hermawan Nuryanto<br>& Ibu Deni Latifah
@@ -144,7 +144,7 @@
           <img src="cpp.jpg" class="w-full h-full object-cover grayscale-[20%] hover:grayscale-0 transition-all duration-700" alt="Wijang Asadullah">
         </div>
         <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
-        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Pria</p>
+        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Puyeng</p>
         <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
         <p class="text-xs px-6 leading-relaxed text-stone-500">
           Putra dari Bapak Bandiya<br>& Ibu Sumanah
@@ -168,7 +168,7 @@
           <p class="text-lg font-bold mb-2">RM. Genduk Wulan</p>
           <p class="text-xs opacity-70 px-6">Jl. Godean - Seyegan, Ngampon, Margodadi, Sleman, Yogyakarta</p>
         </div>
-        <a href="https://maps.app.goo.gl/v6n9XoN9u7L4S1zW9" target="_blank" class="inline-block bg-[#F4F1EA] text-[#7A5A3D] px-8 py-3 rounded-full text-[10px] font-bold tracking-widest shadow-lg uppercase transition-transform hover:scale-105">Buka Google Maps</a>
+        <a href="https://maps.app.goo.gl/mSBr8R6jKFDBqLVVA" target="_blank" class="inline-block bg-[#F4F1EA] text-[#7A5A3D] px-8 py-3 rounded-full text-[10px] font-bold tracking-widest shadow-lg uppercase transition-transform hover:scale-105">Buka Google Maps</a>
       </div>
     </section>
 
