--- a/index.html
+++ b/index.html
@@ -21,6 +21,48 @@
     overflow-x: hidden; /* Kunci di sini juga */
     box-sizing: border-box; /* Padding masuk ke dalam, bukan ke luar */
 }
+    /* Kontainer Utama */
+.mobile-frame {
+    max-width: 450px;
+    margin: 0 auto;
+    position: relative;
+    min-height: 100vh;
+    /* Warna dasar kertas yang lebih matang */
+    background: #F2EFE9; 
+    overflow-x: hidden;
+    box-shadow: 0 0 50px rgba(0,0,0,0.2);
+}
+
+/* LAPISAN 1: Tekstur Grain Kertas (Dibuat Lebih Kasar) */
+.mobile-frame::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    /* Menggunakan noise yang lebih kontras */
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)'/%3E%3C/svg%3E");
+    opacity: 0.12; /* Dinaikkan dari 0.04 ke 0.12 agar tekstur terlihat jelas */
+    pointer-events: none;
+    z-index: 1;
+    /* Membuat grain tercampur lebih alami dengan warna dasar */
+    mix-blend-mode: multiply; 
+}
+
+/* LAPISAN 2: Bercak Tinta & Vignette (Dibuat Lebih Gelap) */
+.mobile-frame::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: 
+        /* Cahaya jatuh dari pojok kiri (Highlight) */
+        radial-gradient(circle at 20% 0%, rgba(255,255,255,0.9) 0%, transparent 50%),
+        /* Bercak tinta pudar cokelat (Dibuat lebih pekat) */
+        radial-gradient(circle at 10% 85%, rgba(155, 107, 67, 0.15) 0%, transparent 40%),
+        radial-gradient(circle at 90% 15%, rgba(155, 107, 67, 0.12) 0%, transparent 35%),
+        /* Vignette di pinggiran (Dibuat lebih dramatis) */
+        radial-gradient(circle, transparent 60%, rgba(74, 66, 56, 0.15) 100%);
+    pointer-events: none;
+    z-index: 2;
+}
     body { font-family: 'Quicksand', sans-serif; background-color: #1a1a1a; color: var(--text); overflow-x: hidden; }
     .font-title { font-family: 'Marcellus', serif; }
     .font-serif { font-family: 'Alice', serif; }
