--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <div class="mobile-frame shadow-2xl">
+  <div class="mobile-frame">
     <div id="music-container" class="music-btn" onclick="toggleMusic()">
       <span id="music-icon">🎵</span>
       <audio id="myAudio" loop>
