--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <div class="mobile-frame">
+  <div class="mobile-frame shadow-2xl">
     <div id="music-container" class="music-btn" onclick="toggleMusic()">
       <span id="music-icon">🎵</span>
       <audio id="myAudio" loop>
@@ -86,9 +86,9 @@
       </audio>
     </div>
 
-    <section class="min-h-screen flex flex-col items-center justify-center p-8 text-center bg-[#EAE3D5]">
+    <section class="min-h-screen flex flex-col items-center justify-center p-8 text-center">
 
-<section class="py-24 px-8 flex flex-col items-center justify-center text-center bg-[#EAE3D5]">
+<section class="py-24 px-8 flex flex-col items-center justify-center text-center">
       <div class="arch-frame w-full py-12 px-4" data-aos="fade-up">
         <p class="uppercase tracking-[0.4em] text-[10px] mb-4 text-[#9B6B43]">Walimatul 'Ursy</p>
         <h1 class="text-5xl font-title text-[#7A5A3D] leading-tight">Azzahra<br>&<br>Wijang</h1>
