--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
     </section>
 
-    <section class="py-28 px-10 text-center bg-[#f5ecda] rounded-t-[50px] -mt-16 relative z-10 shadow-sm" data-aos="fade-up">
+    <section class="py-28 px-10 text-center bg-[#f4ddd3] rounded-t-[50px] -mt-16 relative z-10 shadow-sm" data-aos="fade-up">
   <div class="text-[#7A5A3D] text-xl mb-10 leading-[2.8] font-serif" dir="rtl">
   وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً
 </div>
