--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
     </section>
 
-    <section class="py-28 px-10 text-center bg-[#f4ddd3] rounded-t-[50px] -mt-16 relative z-10 shadow-sm" data-aos="fade-up">
+    <section class="py-28 px-10 text-center bg-[#f4ddd3] rounded-t-[50px] -mt-16 relative z-10 shadow-2xl" data-aos="fade-up">
   <div class="text-[#7A5A3D] text-xl mb-10 leading-[2.8] font-serif" dir="rtl">
   وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً
 </div>
@@ -155,7 +155,7 @@
 
     </section>
 
-    <section class="py-16 px-6 bg-[#7A5A3D] text-white text-center rounded-t-[50px] shadow-lg" data-aos="fade-up">
+    <section class="py-16 px-6 bg-[#b69ca3] text-white text-center rounded-t-[50px] shadow-lg" data-aos="fade-up">
       <h3 class="font-title text-3xl mb-2 italic">Save The Date</h3>
       <p class="font-serif text-xl mb-10 tracking-widest border-b border-white/20 pb-4 inline-block mx-auto">Sabtu, 04 April 2026</p>
 
@@ -174,26 +174,26 @@
       </div>
     </section>
 
-    <section class="py-20 px-8 text-center bg-white" data-aos="fade-up">
-      <h3 class="font-title text-2xl text-[#7A5A3D] mb-6 tracking-widest uppercase">Kado Digital</h3>
+    <section class="py-20 px-8 text-center bg-[#f0ebec]" data-aos="fade-up">
+      <h3 class="font-title text-2xl text-[#b69ca3] mb-6 tracking-widest uppercase">Kado Digital</h3>
       <p class="text-[10px] text-stone-500 italic mb-8 px-6 leading-relaxed">Doa restu Anda merupakan karunia yang sangat berarti bagi kami. Namun jika ingin memberi kado secara cashless melalui:</p>
 
       <div class="space-y-6">
         <div class="bg-[#F4F1EA] p-8 rounded-[30px] border border-stone-100 max-w-xs mx-auto shadow-inner">
           <p class="font-bold text-[10px] text-stone-400 mb-3 tracking-widest uppercase">BRI - Luthfia Azzahra</p>
-          <p class="text-2xl tracking-widest text-[#7A5A3D] mb-6 font-light">1234567890</p>
-          <button onclick="copyText('1234567890')" class="bg-[#7A5A3D] text-white px-8 py-2 rounded-full text-[9px] font-bold uppercase tracking-widest active:scale-95 transition-transform">Salin Rekening</button>
+          <p class="text-2xl tracking-widest text-[#b69ca3] mb-6 font-light">1234567890</p>
+          <button onclick="copyText('1234567890')" class="bg-[#b69ca3] text-white px-8 py-2 rounded-full text-[9px] font-bold uppercase tracking-widest active:scale-95 transition-transform">Salin Rekening</button>
         </div>
         <div class="bg-[#F4F1EA] p-8 rounded-[30px] border border-stone-100 max-w-xs mx-auto shadow-inner">
           <p class="font-bold text-[10px] text-stone-400 mb-3 tracking-widest uppercase text-center">BANK JAGO SYARIAH<br>Wijang Asadulah A.</p>
-          <p class="text-2xl tracking-widest text-[#7A5A3D] mb-6 font-light text-center w-full">000000124</p>
-          <button onclick="copyText('000000124')" class="bg-[#7A5A3D] text-white px-8 py-2 rounded-full text-[9px] font-bold uppercase tracking-widest active:scale-95 transition-transform">Salin Rekening</button>
+          <p class="text-2xl tracking-widest text-[#b69ca3] mb-6 font-light text-center w-full">000000124</p>
+          <button onclick="copyText('000000124')" class="bg-[#b69ca3] text-white px-8 py-2 rounded-full text-[9px] font-bold uppercase tracking-widest active:scale-95 transition-transform">Salin Rekening</button>
         </div>
       </div>
     </section>
 
     <section class="py-20 px-8 bg-[#FDFBF9]" data-aos="fade-up">
-      <h3 class="font-title text-center text-2xl text-[#7A5A3D] mb-8 tracking-widest uppercase">Konfirmasi Kehadiran</h3>
+      <h3 class="font-title text-center text-2xl text-[#b69ca3] mb-8 tracking-widest uppercase">Konfirmasi Kehadiran</h3>
       <form id="rsvpForm" class="space-y-4 bg-white p-6 rounded-[30px] shadow-sm max-w-sm mx-auto border border-stone-100">
         <input type="text" id="namaTamu" placeholder="Nama Lengkap" required class="w-full p-4 rounded-xl bg-[#F4F1EA] text-sm outline-none border-none focus:ring-1 focus:ring-[#9B6B43]">
         <select id="statusHadir" required class="w-full p-4 rounded-xl bg-[#F4F1EA] text-sm outline-none border-none focus:ring-1 focus:ring-[#9B6B43]">
@@ -202,12 +202,12 @@
           <option value="Tidak Hadir">Tidak Hadir</option>
         </select>
         <textarea id="pesanTamu" placeholder="Ucapan & Doa" required class="w-full p-4 h-24 rounded-xl bg-[#F4F1EA] text-sm outline-none resize-none border-none focus:ring-1 focus:ring-[#9B6B43]"></textarea>
-        <button type="submit" class="w-full bg-[#7A5A3D] text-white py-4 rounded-xl text-[10px] font-bold uppercase tracking-widest hover:opacity-90 transition-opacity">Kirim Ucapan</button>
+        <button type="submit" class="w-full bg-[#b69ca3] text-white py-4 rounded-xl text-[10px] font-bold uppercase tracking-widest hover:opacity-90 transition-opacity">Kirim Ucapan</button>
       </form>
       <div id="commentContainer" class="mt-10 space-y-4 max-h-[350px] overflow-y-auto custom-scrollbar pr-2 max-w-sm mx-auto text-left px-2"></div>
     </section>
 
-    <footer class="py-16 bg-[#EAE3D5] text-center text-[9px] tracking-widest text-stone-500 px-8 leading-loose uppercase">
+    <footer class="py-16 bg-[#f4ddd3] text-center text-[9px] tracking-widest text-stone-500 px-8 leading-loose uppercase">
       <div data-aos="fade-up">
         Merupakan suatu kehormatan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir.<br><br>
         <span class="text-xl font-title text-[#7A5A3D] normal-case tracking-normal">Azzahra & Wijang</span><br>
