--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
     </section>
 
-    <section class="py-20 px-8 text-center bg-[#f0ebec]" data-aos="fade-up">
+    <section class="py-20 px-8 text-center bg-[#FDFBF9]" data-aos="fade-up">
       <h3 class="font-title text-2xl text-[#b69ca3] mb-6 tracking-widest uppercase">Kado Digital</h3>
       <p class="text-[10px] text-stone-500 italic mb-8 px-6 leading-relaxed">Doa restu Anda merupakan karunia yang sangat berarti bagi kami. Namun jika ingin memberi kado secara cashless melalui:</p>
 
@@ -207,7 +207,7 @@
       <div id="commentContainer" class="mt-10 space-y-4 max-h-[350px] overflow-y-auto custom-scrollbar pr-2 max-w-sm mx-auto text-left px-2"></div>
     </section>
 
-    <footer class="py-16 bg-[#f4ddd3] text-center text-[9px] tracking-widest text-stone-500 px-8 leading-loose uppercase">
+    <footer class="py-16 bg-[] text-center text-[9px] tracking-widest text-stone-500 px-8 leading-loose uppercase">
       <div data-aos="fade-up">
         Merupakan suatu kehormatan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir.<br><br>
         <span class="text-xl font-title text-[#7A5A3D] normal-case tracking-normal">Azzahra & Wijang</span><br>
