--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
       <p class="text-[10px] text-stone-500 italic mb-8 px-6 leading-relaxed">Doa restu Anda merupakan karunia yang sangat berarti bagi kami. Namun jika ingin memberi kado secara cashless melalui:</p>
 
       <div class="space-y-6">
-        <div class="bg-[#F4F1EA] p-8 rounded-[30px] border border-stone-100 max-w-xs mx-auto shadow-inner">
+        <div class="bg-[#f8f6f2] p-8 rounded-[30px] border border-stone-100 max-w-xs mx-auto shadow-inner">
           <p class="font-bold text-[10px] text-stone-400 mb-3 tracking-widest uppercase">BRI - Luthfia Azzahra</p>
           <p class="text-2xl tracking-widest text-[#b69ca3] mb-6 font-light">1234567890</p>
           <button onclick="copyText('1234567890')" class="bg-[#b69ca3] text-white px-8 py-2 rounded-full text-[9px] font-bold uppercase tracking-widest active:scale-95 transition-transform">Salin Rekening</button>
         </div>
-        <div class="bg-[#F4F1EA] p-8 rounded-[30px] border border-stone-100 max-w-xs mx-auto shadow-inner">
+        <div class="bg-[#f8f6f2] p-8 rounded-[30px] border border-stone-100 max-w-xs mx-auto shadow-inner">
           <p class="font-bold text-[10px] text-stone-400 mb-3 tracking-widest uppercase text-center">BANK JAGO SYARIAH<br>Wijang Asadulah A.</p>
           <p class="text-2xl tracking-widest text-[#b69ca3] mb-6 font-light text-center w-full">000000124</p>
           <button onclick="copyText('000000124')" class="bg-[#b69ca3] text-white px-8 py-2 rounded-full text-[9px] font-bold uppercase tracking-widest active:scale-95 transition-transform">Salin Rekening</button>
@@ -207,7 +207,7 @@
       <div id="commentContainer" class="mt-10 space-y-4 max-h-[350px] overflow-y-auto custom-scrollbar pr-2 max-w-sm mx-auto text-left px-2"></div>
     </section>
 
-    <footer class="py-16 bg-[] text-center text-[9px] tracking-widest text-stone-500 px-8 leading-loose uppercase">
+    <footer class="py-16 text-center text-[9px] tracking-widest text-stone-500 px-8 leading-loose uppercase">
       <div data-aos="fade-up">
         Merupakan suatu kehormatan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir.<br><br>
         <span class="text-xl font-title text-[#7A5A3D] normal-case tracking-normal">Azzahra & Wijang</span><br>
