--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </div>
     </section>
 
-    <section class="py-20 px-8 bg-[#f3d9cd]" data-aos="fade-up">
+    <section class="py-20 px-8 bg-[#f6e4dc]" data-aos="fade-up">
       <h3 class="font-title text-center text-2xl text-[#b69ca3] mb-8 tracking-widest uppercase">Konfirmasi Kehadiran</h3>
       <form id="rsvpForm" class="space-y-4 bg-white p-6 rounded-[30px] shadow-sm max-w-sm mx-auto border border-stone-100">
         <input type="text" id="namaTamu" placeholder="Nama Lengkap" required class="w-full p-4 rounded-xl bg-[#F4F1EA] text-sm outline-none border-none focus:ring-1 focus:ring-[#9B6B43]">
