--- a/index.html
+++ b/index.html
@@ -121,39 +121,47 @@
       </p>
     </section>
 
-    <section class="py-10 px-6 space-y-20">
-      
-      <div class="text-center" data-aos="fade-right">
-        <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden shadow-2xl" style="border-radius: 150px 150px 0 0;">
-          <img src="cpw.jpg" class="w-full h-full object-cover grayscale-[20%] hover:grayscale-0 transition-all duration-700" alt="Luthfia Azzahra">
-        </div>
-        <h2 class="text-3xl font-title text-[#7A5A3D]">Luthfia Azzahra</h2>
-        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Mumet</p>
-        <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
-        <p class="text-xs px-6 leading-relaxed text-stone-500">
-          Putri dari Bapak Hermawan Nuryanto<br>& Ibu Deni Latifah
-        </p>
-      </div>
+    <section class="py-20 px-6 space-y-20">
+  
+  <div class="text-center" data-aos="fade-right">
+    <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden relative shadow-xl" 
+         style="border-radius: 150px 150px 0 0; border: 2px solid #9B6B43; padding: 0;">
+      <img src="cpw.jpg" 
+           class="w-full h-full object-cover" 
+           style="object-position: center top;" 
+           alt="Luthfia Azzahra">
+    </div>
+    <h2 class="text-3xl font-title text-[#7A5A3D]">Luthfia Azzahra</h2>
+    <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Wanita</p>
+    <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
+    <p class="text-xs px-6 leading-relaxed text-stone-500">
+      Putri dari Bapak Hermawan Nuryanto<br>& Ibu Deni Latifah
+    </p>
+  </div>
 
-      <div class="flex items-center justify-center gap-4 opacity-30" data-aos="zoom-in">
-        <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
-        <span class="text-4xl font-serif text-[#D4B996]">&</span>
-        <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
-      </div>
+  <div class="flex items-center justify-center gap-4 opacity-30" data-aos="zoom-in">
+    <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
+    <span class="text-4xl font-serif text-[#D4B996]">&</span>
+    <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
+  </div>
 
-      <div class="text-center" data-aos="fade-left">
-        <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden shadow-2xl" style="border-radius: 150px 150px 0 0;">
-          <img src="cpp.jpg" class="w-full h-full object-cover grayscale-[20%] hover:grayscale-0 transition-all duration-700" alt="Wijang Asadullah">
-        </div>
-        <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
-        <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Puyeng</p>
-        <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
-        <p class="text-xs px-6 leading-relaxed text-stone-500">
-          Putra dari Bapak Bandiya<br>& Ibu Sumanah
-        </p>
-      </div>
+  <div class="text-center" data-aos="fade-left">
+    <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden relative shadow-xl" 
+         style="border-radius: 150px 150px 0 0; border: 2px solid #9B6B43; padding: 0;">
+      <img src="cpp.jpg" 
+           class="w-full h-full object-cover" 
+           style="object-position: center top;" 
+           alt="Wijang Asadullah">
+    </div>
+    <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
+    <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Puyeng</p>
+    <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
+    <p class="text-xs px-6 leading-relaxed text-stone-500">
+      Putra dari Bapak Bandiya<br>& Ibu Sumanah
+    </p>
+  </div>
 
-    </section>
+</section>
 
     <section class="py-16 px-6 bg-[#b69ca3] text-white text-center rounded-t-[50px] shadow-lg" data-aos="fade-up">
       <h3 class="font-title text-3xl mb-2 italic">Save The Date</h3>
@@ -176,7 +184,7 @@
 
     <section class="py-20 px-8 text-center bg-[#FDFBF9]" data-aos="fade-up">
       <h3 class="font-title text-2xl text-[#b69ca3] mb-6 tracking-widest uppercase">Kado Digital</h3>
-      <p class="text-[10px] text-stone-500 italic mb-8 px-6 leading-relaxed">Doa restu Anda merupakan karunia yang sangat berarti bagi kami. Namun jika ingin memberi kado secara cashless melalui:</p>
+      <p class="text-[10px] text-stone-500 italic mb-8 px-6 leading-relaxed">Doa restu Anda merupakan karunia yang sangat berarti bagi kami. Namun jika ingin memberi kado secara cashless bisa melalui:</p>
 
       <div class="space-y-6">
         <div class="bg-[#f8f6f2] p-8 rounded-[30px] border border-stone-100 max-w-xs mx-auto shadow-inner">
@@ -192,7 +200,7 @@
       </div>
     </section>
 
-    <section class="py-20 px-8 bg-[#f6e4dc]" data-aos="fade-up">
+    <section class="py-20 px-8 bg-[#fbf4f1] rounded-b-[50px] shadow-lg" data-aos="fade-up">
       <h3 class="font-title text-center text-2xl text-[#b69ca3] mb-8 tracking-widest uppercase">Konfirmasi Kehadiran</h3>
       <form id="rsvpForm" class="space-y-4 bg-white p-6 rounded-[30px] shadow-sm max-w-sm mx-auto border border-stone-100">
         <input type="text" id="namaTamu" placeholder="Nama Lengkap" required class="w-full p-4 rounded-xl bg-[#F4F1EA] text-sm outline-none border-none focus:ring-1 focus:ring-[#9B6B43]">
