--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   
   <div class="text-center" data-aos="fade-right">
     <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden relative shadow-xl" 
-         style="border-radius: 150px 150px 0 0; border: 2px solid #9B6B43; padding: 0;">
+         style="border-radius: 150px 150px 0 0; border: 4px solid #9B6B43; padding: 6px;">
       <img src="cpw.jpg" 
            class="w-full h-full object-cover" 
            style="object-position: center top;" 
@@ -147,14 +147,14 @@
 
   <div class="text-center" data-aos="fade-left">
     <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden relative shadow-xl" 
-         style="border-radius: 150px 150px 0 0; border: 2px solid #9B6B43; padding: 0;">
+         style="border-radius: 150px 150px 0 0; border: 4px solid #9B6B43; padding: 6px;">
       <img src="cpp.jpg" 
            class="w-full h-full object-cover" 
            style="object-position: center top;" 
            alt="Wijang Asadullah">
     </div>
     <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
-    <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Puyeng</p>
+    <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#D4B996]">Mempelai Puyeng</p>
     <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
     <p class="text-xs px-6 leading-relaxed text-stone-500">
       Putra dari Bapak Bandiya<br>& Ibu Sumanah
