--- a/index.html
+++ b/index.html
@@ -115,52 +115,55 @@
 <p class="font-bold text-[#9B6B43] tracking-widest text-[9px] uppercase opacity-80">— QS. Ar-Rum: 21 —</p>
 </section>
 
-    <section class="py-12 px-10 text-center" data-aos="fade-up">
-      <p class="text-xs leading-relaxed text-stone-500 italic">
-        Maha Suci Allah yang telah menciptakan makhluk-Nya berpasang-pasangan. Semoga Allah senantiasa meridhoi pernikahan kami:
-      </p>
-    </section>
-
-    <section class="py-20 px-6 space-y-20">
+  <section class="pt-16 pb-20 px-6">
   
-  <div class="text-center" data-aos="fade-right">
-    <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden relative shadow-xl" 
-         style="border-radius: 150px 150px 0 0; border: 4px solid #9B6B43; padding: 6px;">
-      <img src="cpw.jpg" 
-           class="w-full h-full object-cover" 
-           style="object-position: center top;" 
-           alt="Luthfia Azzahra">
-    </div>
-    <h2 class="text-3xl font-title text-[#7A5A3D]">Luthfia Azzahra</h2>
-    <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Wanita</p>
-    <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
-    <p class="text-xs px-6 leading-relaxed text-stone-500">
-      Putri dari Bapak Hermawan Nuryanto<br>& Ibu Deni Latifah
+  <div class="text-center pb-8 px-10" data-aos="fade-up">
+    <p class="text-xs leading-relaxed text-stone-500 italic">
+      Maha Suci Allah yang telah menciptakan makhluk-Nya berpasang-pasangan. Semoga Allah senantiasa meridhoi pernikahan kami:
     </p>
   </div>
 
-  <div class="flex items-center justify-center gap-4 opacity-30" data-aos="zoom-in">
-    <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
-    <span class="text-4xl font-serif text-[#D4B996]">&</span>
-    <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
-  </div>
-
-  <div class="text-center" data-aos="fade-left">
-    <div class="arch-frame w-56 h-72 mx-auto mb-8 overflow-hidden relative shadow-xl" 
-         style="border-radius: 150px 150px 0 0; border: 4px solid #9B6B43; padding: 6px;">
-      <img src="cpp.jpg" 
-           class="w-full h-full object-cover" 
-           style="object-position: center top;" 
-           alt="Wijang Asadullah">
+  <div class="space-y-12">
+    
+    <div class="text-center" data-aos="fade-right">
+      <div class="arch-frame w-56 h-72 mx-auto mb-6 overflow-hidden relative shadow-xl" 
+           style="border-radius: 150px 150px 0 0; border: 4px solid #9B6B43; padding: 6px; background-color: white;">
+        <img src="cpw.jpg" 
+             class="w-full h-full object-cover" 
+             style="object-position: center top;" 
+             alt="Luthfia Azzahra">
+      </div>
+      <h2 class="text-3xl font-title text-[#7A5A3D]">Luthfia Azzahra</h2>
+      <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Wanita</p>
+      <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
+      <p class="text-xs px-6 leading-relaxed text-stone-500">
+        Putri dari Bapak Hermawan Nuryanto<br>& Ibu Deni Latifah
+      </p>
     </div>
-    <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
-    <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#D4B996]">Mempelai Puyeng</p>
-    <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
-    <p class="text-xs px-6 leading-relaxed text-stone-500">
-      Putra dari Bapak Bandiya<br>& Ibu Sumanah
-    </p>
-  </div>
 
+    <div class="flex items-center justify-center gap-4 opacity-30 py-4" data-aos="zoom-in">
+      <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
+      <span class="text-4xl font-serif text-[#D4B996]">&</span>
+      <div class="h-[1px] w-10 bg-[#9B6B43]"></div>
+    </div>
+
+    <div class="text-center" data-aos="fade-left">
+      <div class="arch-frame w-56 h-72 mx-auto mb-6 overflow-hidden relative shadow-xl" 
+           style="border-radius: 150px 150px 0 0; border: 4px solid #9B6B43; padding: 6px; background-color: white;">
+        <img src="cpp.jpg" 
+             class="w-full h-full object-cover" 
+             style="object-position: center top;" 
+             alt="Wijang Asadullah">
+      </div>
+      <h2 class="text-3xl font-title text-[#7A5A3D]">Wijang Asadullah Al Sueh</h2>
+      <p class="text-[10px] uppercase mt-2 font-bold tracking-[0.3em] text-[#9B6B43]">Mempelai Pria</p>
+      <div class="h-[1px] w-12 bg-[#9B6B43]/30 mx-auto my-4"></div>
+      <p class="text-xs px-6 leading-relaxed text-stone-500">
+        Putra dari Bapak Bandiya<br>& Ibu Sumanah
+      </p>
+    </div>
+
+  </div>
 </section>
 
     <section class="py-16 px-6 bg-[#b69ca3] text-white text-center rounded-t-[50px] shadow-lg" data-aos="fade-up">
